made some small changes

--- a/style.css
+++ b/style.css
@@ -1,44 +1,56 @@
-#navbarNav {
-    justify-content: flex-end;
-}.nav-link {
+#navbarNav{
+    justify-content:flex-end;
+}
+.nav-link{
     color: #000!important;
-}.navbg {
-    background-color:rgba(255, 255, 255, 0.2)!important;
-}.bg-img{
+}
+.navbg{
+    background-color: rgba(225,225,225,0.2)!important;
+}
+.bg-img{
     width: 100vw!important;
-    margin-top: -78px;
-}.start-img{
+    margin-top: -77px;
+}
+.start-img{
     position: relative;
-}.image-text{
-    position: absolute;
-    top: 85px;
+}
+.image-text{
+    position:absolute;
+    top: 75px;
     left: 50px;
     color: #fff;
-}#gdsc h1{
-    color: rgb(64, 141, 241);
-}.gdsc-section {
-    min-height: 100vh;
+}
+#gdsc h1{
+    color: rgb(64,141,241);
+}
+.gdsc-section{
+    min-height:100vh ;
     padding-top: 10vh;
-}.card-body img {
-    width: 50px;
-    margin-bottom: 20px;
-}.aws {
+}
+.card-body img{
+     width: 50px;
+     margin-bottom: 20px;
+}
+.aws{
     background-color: orange;
     min-height: 100vh;
-}.center-aws {
+}
+.center-aws{
     display: flex;
     justify-content: center;
     align-items: center;
-}.center-aws h5 {
-    line-height: 1.5;
-}footer {
+}
+.center-aws h5{
+    list-style: 1.5;
+}
+footer{
     background-color: #252F3E;
-}.footer a {
+}
+.footer a {
     color: #fff;
     text-decoration: none;
 }
-
-@media (max-width: 630px) {
+@media (max-width:630px){
     .image-text{
         font-size: 10px!important;
         top: 20px;
